ordene las carpetas

--- a/inicio.html
+++ b/inicio.html
@@ -3,13 +3,10 @@
     <div class="fondo">
      <head>
         <meta charset="UTF-8">
-         <link rel="stylesheet" href="estilos.css" />
-         <link rel="stylesheet" href="styles.css">
-         <!--inicio SEO*/ /*KEYWORDS -->
-         <meta name="keywords" content="new bar en tu mesa, Bar, Restaurante, Coca-Cola, Bebidas, Comidas">
-         <!--TITULO -->
+         <link rel="stylesheet" href="estilos/estilos.css" />
+         <link rel="stylesheet" href="estilos/styles.css">
+         <meta name="keywords" content="Bar, Restaurante, Bebidas, Comidas">
          <title>Restaurante Inicio</title>
-         <!--DESCRIPCION -->
          <meta name="description" content="Presentamos una alineación revolucionaria, comprometidos con el abastecimiento responsable.
             Redefiniendo experiencias culinarias a medida. El valor central en el corazón de todas las Experiencias AURUM 
             es la sostenibilidad, no solo en el abastecimiento y selección de ingredientes, sino 
