ordene las carpetas de "nosotros"

--- a/nosotros/Nosotros.html
+++ b/nosotros/Nosotros.html
@@ -3,8 +3,8 @@
     <div class="fondo">
         <head>
            <meta charset="UTF-8">
-           <title>Nosotros</html></title>
-            <link rel="stylesheet" href="../estilos.css"/>
+           <title>Nosotros</title>
+            <link rel="stylesheet" href="..estilos/estilos.css"/>
    
         </head>
     <body>
@@ -21,7 +21,7 @@
         <h1 class="nosotros">Nosotros</h1>
         <br>
         <div class="nosotrosImagen">
-         <img src="equipo.jpg" width="60%" alt="equipo">
+         <img src="img/equipo.jpg" width="60%" alt="equipo">
         </div>
         <h4>EQUIPO AURUM</h4>
            <p class="tituloEquipo"> Presentamos una alineación revolucionaria de chefs jóvenes, comprometidos con el abastecimiento responsable, el desarrollo de talentos futuros y el impacto ambiental minimizado.
